<resources>
    <string name="app_name">Project Aplikasi Kalkulator</string>
    <!-- Fungsi dasar -->
    <string name="btn_off">OFF</string>
    <string name="btn_clear">C</string>
    <string name="btn_percent">%</string>
    <string name="btn_divide">÷</string>
    <string name="btn_multiply">X</string>
    <string name="btn_subtract">-</string>
    <string name="btn_add">+</string>
    <string name="btn_equals">=</string>
    <string name="btn_dot">.</string>

    <!-- Angka -->
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
</resources>