<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center">

    <!-- Baris 1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <Button style="@style/KalkulatorButton" android:text="@string/btn_off"/>
        <Button style="@style/KalkulatorButton" android:text="@string/btn_clear"/>
        <Button style="@style/KalkulatorButton" android:text="@string/btn_percent"/>
        <Button style="@style/KalkulatorButton" android:text="@string/btn_divide"/>

    </LinearLayout>

    <!-- Baris 2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <Button style="@style/KalkulatorButton" android:text="@string/btn_7"/>
        <Button style="@style/KalkulatorButton" android:text="@string/btn_8"/>
        <Button style="@style/KalkulatorButton" android:text="@string/btn_9"/>
        <Button style="@style/KalkulatorButton" android:text="@string/btn_multiply"/>

    </LinearLayout>

    <!-- Baris 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <Button style="@style/KalkulatorButton" android:text="@string/btn_4"/>
        <Button style="@style/KalkulatorButton" android:text="@string/btn_5"/>
        <Button style="@style/KalkulatorButton" android:text="@string/btn_6"/>
        <Button style="@style/KalkulatorButton" android:text="@string/btn_subtract"/>
    </LinearLayout>

    <!-- Baris 4 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <Button style="@style/KalkulatorButton" android:text="@string/btn_1"/>
        <Button style="@style/KalkulatorButton" android:text="@string/btn_2"/>
        <Button style="@style/KalkulatorButton" android:text="@string/btn_3"/>
        <Button style="@style/KalkulatorButton" android:text="@string/btn_add"/>
    </LinearLayout>

    <!-- Baris 5 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button style="@style/KalkulatorButton" android:text="@string/btn_0"/>
        <Button style="@style/KalkulatorButton" android:text="@string/btn_dot"/>
        <Button style="@style/KalkulatorButton" android:text="@string/btn_equals"/>
    </LinearLayout>

</LinearLayout>
